# aces-amf

./: .gitignore  README.md  generate_bindings.sh  pyproject.toml  regenerate_lock.sh
.github/workflows/: test-python.yml
aces-amf-lib/: README.md  pyproject.toml
aces-amf-lib/src/aces_amf_lib/: __init__.py  aces_amf.py  amf_utilities.py  semantic_validation.py  uri_codec.py  validation.py
aces-amf-lib/src/aces_amf_lib/amf_v1/: __init__.py  aces_metadata_file.py  asc_cdl_schema_v1_01.py  st433b_2008_am1_2011.py  xmldsig_core_schema.py
aces-amf-lib/src/aces_amf_lib/amf_v2/: __init__.py  aces_metadata_file.py  asc_cdl_schema_v1_01.py  st433b_2008_am1_2011.py  xmldsig_core_schema.py
aces-amf-lib/tests/: test_aces_amf.py  test_amf_utilities.py  test_semantic_validation.py
aces-amf-lib/tests/data/: aces-examples
schema/: acesMetadataFile.xsd
